[package]
name = "slint-rust-template"
version = "0.1.0"
authors = ["Rasmus Ingerslev <IngerslevSoftware@outlook.com>"]
edition = "2021"
build = "build.rs"
description = "Application to calculate import tax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"

[build-dependencies]
slint-build = "1.8.0"

[package.metadata.bundle]
name = "Import Calculator"
identifier = "io.github.RIngerslev.import-calculator"
